2107
It happens again with r19108
{code}
class Test {
  def test[A](list: List[A]) = list match {
    case Seq(x, y) => "xy"
    case Seq(x) => "x"
    case _ => "something else"
  }
}
{code}
gives
{code}
Test.scala:4: error: unreachable code
    case Seq(x) => "x"
                   ^
one error found
{code}
but
{code}
class Test {
  def test[A](list: List[A]) = list match {
    case Seq(x) => "x"
    case Seq(x, y) => "xy"
    case _ => "something else"
  }
}
{code}
compiles without complaints.
